--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 body {
     background-color: rgb(158, 140, 140);
 }
 .container {
     display: flex;
-    width: 100vw;
-    
-    
+    justify-content: center;
+    align-items: center;
+    width: 100vw; 
+}
+#first {
+    color: rgb(243, 32, 32);
+    background-color: black;
+    border: 2px solid grey;
+    border-radius: 2px;
+    padding: 5px;
 }
