--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw; 
+}
+.full-width {
+    width: 100vw;
 }
 #first {
     margin-top: 20px;
@@ -19,9 +21,21 @@ body {
     background-color: rgb(40, 37, 37);
     border: 3px solid rgb(85, 81, 81);
     border-radius: 0px 10px;
-    padding: 10px;
+    /* not add px to paddings because it can break the responsivness */
+    padding: 10wv;
 }
 #first {
     font-size: 3.5rem;
     font-family: "Sixtyfour Convergence", sans-serif;
+}
+/* object-fit: cover; make the pc fint inside a container but do not deform the image */
+.img {
+    margin: 20wv;
+    /* width: 100%;
+    height: 100%; */
+}
+.img img {
+    object-fit: cover;
+    width: 60%;
+    height: 60%;
 }
