--- a/style.css
+++ b/style.css
@@ -29,13 +29,17 @@ body {
     font-family: "Sixtyfour Convergence", sans-serif;
 }
 /* object-fit: cover; make the pc fint inside a container but do not deform the image */
-.img {
-    margin: 20wv;
-    /* width: 100%;
-    height: 100%; */
-}
 .img img {
     object-fit: cover;
+    margin-top: 2vw;
     width: 60%;
     height: 60%;
+}
+.flex-row {
+    flex-direction: row;
+}
+.card img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
