--- a/style.css
+++ b/style.css
@@ -23,23 +23,40 @@ body {
     border-radius: 0px 10px;
     /* not add px to paddings because it can break the responsivness */
     padding: 10wv;
-}
-#first {
     font-size: 3.5rem;
     font-family: "Sixtyfour Convergence", sans-serif;
 }
+
 /* object-fit: cover; make the pc fint inside a container but do not deform the image */
 .img img {
     object-fit: cover;
-    margin-top: 2vw;
-    width: 60%;
-    height: 60%;
+    margin-bottom: 2vw;
+    width: 98.5%;
+    height: 45vw;
 }
-.flex-row {
-    flex-direction: row;
+.flex-col {
+    flex-direction: column;
 }
 .card img {
     width: 300px;
     height: 300px;
     object-fit: cover;
+}
+/* gallery styling */
+#gallery-div {
+    width: 70%;
+    display: grid;
+    grid-template-areas: "item1 item2 item3 item4";
+}
+#ithem1{
+    grid-area: item1;
+}
+#ithem2{
+    grid-area: item2;
+}
+#ithem3{
+    grid-area: item3;
+}
+#ithem4{
+    grid-area: item4;
 }
