--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     background-color: rgb(187, 174, 174);
 }
-
+/* general styling for all givs with the class .container */
 .container {
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@ body {
 .full-width {
     width: 100vw;
 }
-
+/* heading, the title of the gallery styling */
 #first {
     margin-top: 20px;
     color: rgb(243, 32, 32);
@@ -57,7 +57,7 @@ body {
     display: grid;
     grid-template-areas: "item1 item2 item3 item4";
 }
-
+/* gallery items */
 #ithem1 {
     grid-area: item1;
 }
@@ -74,7 +74,7 @@ body {
     grid-area: item4;
 }
 
-/* resizing content - mobile first content/ breakpoints
+/* resizing content - mobile first content/ breakpoints */
  /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     #gallery-div {
